Add the peripheral itself.
Currently, it does nothing but notify via syslog whenever it gets
notified. This seems to be working just fine.

--- a/resources/common/lang/en_US.xml
+++ b/resources/common/lang/en_US.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
 <!DOCTYPE properties SYSTEM "http://java.sun.com/dtd/properties.dtd">
 <properties>
-    <!-- <entry key="tile.someblock.name">Some Block</entry> -->
+    <entry key="tile.cc.chatbox.name">Chat Box Peripheral</entry>
 </properties>
